--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -17,4 +17,17 @@ body {
   height: 95vh;
   width: 80vw; /* Modifica questo */
   border: 1px solid red;
+  background-color: #ffffff;
+  display: flex;
+}
+
+.left-sidebar {
+  width: 35%;
+  height: 100%;
+  border: 1px solid purple;
+}
+
+.right-section {
+  flex-grow: 1;
+  border: 1px solid green;
 }
