--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -209,10 +209,38 @@ RIGHT SECTION
 .footer-right {
   display: flex;
   align-items: center;
+  padding: 10px;
+  background-color: #f3eeea;
 }
 
 .footer-input-left {
   width: 80px;
+  text-align: center;
+}
+
+.footer-input-center {
+  flex-grow: 1;
+}
+
+.footer-input-center input {
+  flex-grow: 1;
+  width: 100%;
   height: 50px;
-  border: 1px solid red;
+  border-radius: 10px;
+  border: none;
+}
+
+.footer-input-center input::placeholder {
+  padding-left: 20px;
+}
+
+.footer-input-right {
+  width: 80px;
+  text-align: center;
+}
+
+.footer-right i {
+  font-size: 20px;
+  color: #6b7376;
+  cursor: pointer;
 }
