--- a/milestone2/css/style.css
+++ b/milestone2/css/style.css
@@ -233,11 +233,16 @@ RIGHT SECTION
   gap: 10px;
 }
 
+.cont-chat li {
+  display: flex;
+  flex-direction: column;
+}
+
 .sent {
   background-color: #d5f9ba;
   align-self: flex-end;
   width: 40%;
-  padding: 15px;
+  padding: 15px 10px 5px 15px;
   border-radius: 15px;
 }
 
@@ -245,8 +250,21 @@ RIGHT SECTION
   background-color: #ffff;
   align-self: flex-start;
   width: 40%;
-  padding: 20px;
+  padding: 15px 10px 5px 15px;
   border-radius: 15px;
+}
+
+.cont-chat li p {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  padding-right: 20px;
+}
+
+.cont-chat span {
+  font-size: 12px;
+  color: #b9bfbb;
+  align-self: flex-end;
 }
 
 /* footer-input */
