--- a/milestone4/css/style.css
+++ b/milestone4/css/style.css
@@ -26,6 +26,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 }
 
 .right-section {
@@ -142,9 +143,16 @@ LEFT SECTION
   font-size: 16px;
 }
 
-.cont-search input {
+.search-input {
   flex-grow: 1;
+}
+
+.cont-search input {
   border: 1px solid #fafafa;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 0 2px 2px 0;
 }
 
 /* contacts */
@@ -197,6 +205,7 @@ RIGHT SECTION
 .right-section {
   display: flex;
   flex-direction: column;
+  border-left: 1px solid #d6d6d6;
 }
 /* header */
 .header-right {
@@ -205,7 +214,6 @@ RIGHT SECTION
   justify-content: space-between;
   padding: 10px 20px;
   background-color: #eaeaea;
-  border-left: 1px solid #d6d6d6;
 }
 
 #last-access {
