--- a/milestone5/css/style.css
+++ b/milestone5/css/style.css
@@ -263,13 +263,40 @@ RIGHT SECTION
   border-radius: 15px;
 }
 
-.cont-chat li i {
+.top-message {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cont-chat li .dropdown-cont {
+  align-self: flex-end;
+  text-align: start;
+}
+
+.cont-chat li .dropdown-cont i {
   font-size: 12px;
   color: #b9bfbb;
-  align-self: flex-end;
   cursor: pointer;
 }
 
+.dropd-list-cont {
+  background-color: #ffffff;
+  z-index: 10;
+  position: absolute;
+  padding: 8px 0;
+  border-radius: 5px;
+}
+
+.dropd-list-cont li {
+  padding: 5px 15px;
+}
+
+.dropd-list-cont li:hover {
+  background-color: #6b7376;
+  cursor: pointer;
+}
+
+/* text */
 .cont-chat li p {
   display: flex;
   flex-direction: column;
@@ -277,6 +304,7 @@ RIGHT SECTION
   padding-right: 20px;
 }
 
+/* date & time */
 .cont-chat li span {
   font-size: 12px;
   color: #b9bfbb;
