--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -165,9 +165,6 @@ LEFT SECTION
 }
 
 .contact-list-section ul {
-  /* display: flex;
-  flex-direction: column;
-  flex-grow: 1; */
   list-style-type: none;
   overflow-y: scroll;
 }
@@ -190,11 +187,13 @@ LEFT SECTION
 .last-message {
   font-size: 14px;
   color: #b6b9bb;
+  width: 90%;
 }
 
 .profile-time span {
   font-size: 12px;
   color: #b6b9bb;
+  width: 10%;
 }
 
 /*
