--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -230,6 +230,8 @@ RIGHT SECTION
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
 }
 
 .cont-chat {
@@ -244,25 +246,23 @@ RIGHT SECTION
   gap: 10px;
 }
 
-.cont-chat li {
+.cont-chat ul li {
   display: flex;
   flex-direction: column;
+  position: relative;
+  padding: 6px 8px 8px 9px;
+  border-radius: 8px;
+  padding-right: 30px;
 }
 
 .sent {
   background-color: #d5f9ba;
   align-self: flex-end;
-  width: 40%;
-  padding: 8px 10px 0px 15px;
-  border-radius: 15px;
 }
 
 .received {
   background-color: #ffff;
   align-self: flex-start;
-  width: 40%;
-  padding: 8px 10px 0px 15px;
-  border-radius: 15px;
 }
 
 .top-message {
@@ -311,6 +311,9 @@ RIGHT SECTION
   font-size: 12px;
   color: #b9bfbb;
   align-self: flex-end;
+  position: absolute;
+  bottom: 0;
+  right: 5px;
 }
 
 /* footer-input */
