--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .master-container {
-  font-family: 'Lato', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(to top, #dcdbd2 85%, #009688 15%);
   height: 100vh;
   display: flex;
@@ -222,6 +222,30 @@ RIGHT SECTION
   font-size: 15px;
   color: #6b7376;
 }
+
+.menu-chat {
+  position: relative;
+}
+
+.menu-chat ul {
+  background-color: #ffffff;
+  z-index: 99;
+  position: fixed;
+  padding: 8px 0;
+  border-radius: 5px;
+  width: 150px;
+  list-style-type: none;
+}
+
+.menu-chat ul li {
+  padding: 9px 5px;
+}
+
+.menu-chat ul li:hover {
+  background-color: #6b7376;
+  cursor: pointer;
+}
+
 /* main chat */
 .main-chat {
   flex-grow: 1;
@@ -230,7 +254,6 @@ RIGHT SECTION
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: 200;
 }
 
